--- a/app/web/templates/episodes.html
+++ b/app/web/templates/episodes.html
@@ -28,13 +28,12 @@
             <p class="text-gray-600 break-all text-sm">{{ subscription.feed_url }}</p>
 
             <div class="mt-4 flex flex-wrap gap-2 overflow-x-auto scrollbar-hide">
-                <a href="{{ links.rss }}"
-                    class="text-xs bg-orange-500 text-white px-3 py-2 rounded hover:bg-orange-600 whitespace-nowrap min-h-[36px] flex items-center"
-                    target="_blank">RSS</a>
+                <a href="{{ links.direct }}"
+                    class="text-xs bg-orange-600 text-white px-3 py-2 rounded hover:bg-orange-700 whitespace-nowrap min-h-[36px] flex items-center">Direct</a>
                 <a href="{{ links.pocket_casts }}"
                     class="text-xs bg-red-500 text-white px-3 py-2 rounded hover:bg-red-600 whitespace-nowrap min-h-[36px] flex items-center">Pocket
                     Casts</a>
-                <a href="{{ links.apple }}"
+                <a href="/subscribe/apple?url={{ links.apple | urlencode }}"
                     class="text-xs bg-purple-600 text-white px-3 py-2 rounded hover:bg-purple-700 whitespace-nowrap min-h-[36px] flex items-center">Apple</a>
                 <a href="{{ links.overcast }}"
                     class="text-xs bg-orange-600 text-white px-3 py-2 rounded hover:bg-orange-700 whitespace-nowrap min-h-[36px] flex items-center">Overcast</a>
