--- a/app/web/templates/index.html
+++ b/app/web/templates/index.html
@@ -256,7 +256,7 @@
         </div>
 
         <div class="flex justify-between items-center border-t pt-3 mt-auto">
-            <a href="{{ item.links.rss }}" target="_blank"
+            <a href="{{ item.links.direct }}" target="_blank"
                 class="text-blue-600 hover:underline text-sm flex items-center gap-1">
                 <span>Direct RSS</span>
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
